--- a/mi_app/templates/servicios.html
+++ b/mi_app/templates/servicios.html
@@ -121,56 +121,56 @@
           <div class="servicio">
             <h3>Ayudas Diagnósticas</h3>
             <p class="contenido oculto">Contamos con equipos de última generación para diagnósticos precisos, incluyendo radiografías y análisis de laboratorio.</p>
-            <a href="ayudas.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'ayudas' %}" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Hospitalización de Mascotas</h3>
             <p class="contenido oculto">Brindamos cuidados intensivos y hospitalización si tu mascota requiere de una atención continua.</p>
-            <a href="servicios/hospitalizacion.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'hospitalizacion' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Urgencias Veterinarias 24 Horas</h3>
             <p class="contenido oculto">Estamos disponibles en cualquier momento para atender emergencias. Tù tranquilidad y la salud de tu mascota son nuestra prioridad.</p>
-            <a href="servicios/urgencias.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'urgencias' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Cirugía Veterinaria</h3>
             <p class="contenido oculto">Realizamos cirugías con tecnología y técnicas avanzadas. Nuestra prioridad es el bienestar y la seguridad de tu mascota en cualquier procedimiento, ya sea una esterilización o una cirugía compleja.</p>
-            <a href="servicios/cirugia.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'cirugia' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Medicina Preventiva Veterinaria</h3>
             <p class="contenido oculto">Promovemos y nos encargamos de la salud a largo plazo de tu mascota a través de vacunas, desparasitación, nutrición adecuada y más.</p>
-            <a href="servicios/medicina.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'medicina' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Consulta Veterinaria</h3>
             <p class="contenido oculto">Nuestros veterinarios altamente capacitados realizan evaluaciones exhaustivas para diagnosticar y tratar a tu mascota. Estamos listos para atender y solucionar todas tus preguntas.                        </p>
-            <a href="servicios/consulta.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'consulta' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Trámites de Viaje</h3>
             <p class="contenido oculto">Si planeas viajar con tu mascota, nosotros te proporcionamos la información y los documentos necesarios.</p>
-            <a href="servicios/tramites.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'tramites' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
         <div class="servicios">
           <div class="servicio">
             <h3>Laboratorio Clínico</h3>
             <p class="contenido oculto">Contamos con un laboratorio bien equipado para análisis diferentes tipos de examenes, con el objetivo de lograr un diagnóstico preciso y rápido.</p>
-            <a href="servicios/laboratorio.html" class="ver-mas oculto">Ver más...</a>
+            <a href="{% url 'laboratorio' }" class="ver-mas oculto">Ver más...</a>
           </div>
         </div>
       </div>
