--- a/mi_app/templates/servicios/urgencias.html
+++ b/mi_app/templates/servicios/urgencias.html
@@ -18,11 +18,11 @@
     <p>Línea de urgencias 24/7</p>
 </div>
 <header id="Header">
-    <img src="../static/img/LogoMotas.png" class="logo">
+    <img src="../../static/img/LogoMotas.png" class="logo" alt="Logo for Centro Médico Canino y Felino Motas featuring a happy cartoon dog and cat in a green bathtub filled with bubbles and a yellow rubber duck, surrounded by a pink circular border. The text around the logo reads Centro Médico Canino y Felino Motas in playful pink letters, conveying a friendly and welcoming atmosphere for a veterinary clinic.">
 
     <input type="checkbox" id="menu">
     <label for="menu">
-        <img src="../static/img/menu.png" class="menu-ico" alt="Menú" />
+        <img src="../../static/img/menu.png" class="menu-ico" alt="Menú" />
     </label>
 
     <ul class="menu">
