--- a/mi_app/templates/nosotros.html
+++ b/mi_app/templates/nosotros.html
@@ -1,17 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - Motas</title>
-    <link rel="stylesheet" href="../static/CSS/nosotros.css">
+    <link rel="stylesheet" href="{% static 'CSS/nosotros.css' %}">
 </head>
 <body>
 
 <!--************************* Cabecera ******************************-->
 
 <div id="urgencias">
-    <p>Línea de urgencias 24/7</p>
+    <a href="tel:3115406289" class="urgencia">Llama a la línea de emergencia</a>
 </div>
 
 <header id="Header">
@@ -182,12 +183,11 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Contáctanos</h2>
-    <button class="emergency">Llama a la línea de emergencia</button>
+    <button class="emergency" id="btn-llamar-emergencia">Llama a la línea de emergencia</button>
     <button class="option" id="btn-whatsapp-modal">Escríbenos un mensaje</button>
     <button class="option" id="btn-agenda-modal">Agenda tu cita</button>
   </div>
 </div>
-
     <!--************************* Modal de Contacto ******************************-->
 
     <div class="ubicacion">
@@ -265,6 +265,10 @@
             Diseño y desarrollo por M. X. V. © 2025</p>
     </footer>
 <script>
+document.getElementById('btn-llamar-emergencia').onclick = function() {
+    window.location.href = 'tel:3115406289';
+};
+
 document.getElementById('btn-whatsapp-modal').onclick = function() {
     window.open('https://wa.me/573113020495', '_blank');
 };
