--- a/staticfiles/CSS/perfil.css
+++ b/staticfiles/CSS/perfil.css
@@ -399,7 +399,7 @@ button {
 .Panel {
     width: 30%;
     padding: 30px;
-    background: #ff58e6;
+    background: #ffff58;
     color: white;
     border: none;
     border-radius: 30px;
