--- a/mi_app/static/CSS/adopta.css
+++ b/mi_app/static/CSS/adopta.css
@@ -32,7 +32,14 @@ body {
     gap: 12px;
     cursor: pointer;
 }
+  .urgencia{
+    text-decoration: none;
+    color: white;
+  }
 
+  .urgencia:hover {
+    text-decoration: underline;
+  }
 /* Flecha animada */
 .arrow {
     width: 15px;
