--- a/mi_app/static/CSS/peluditos.css
+++ b/mi_app/static/CSS/peluditos.css
@@ -230,7 +230,14 @@ label {
     font-size: 24px;
     cursor: pointer;
 }
+  .urgencia{
+    text-decoration: none;
+    color: white;
+  }
 
+  .urgencia:hover {
+    text-decoration: underline;
+  }
 .modal-login{
     display: none; /* Oculto por defecto */
     position: fixed;
