--- a/mi_app/static/CSS/perfil.css
+++ b/mi_app/static/CSS/perfil.css
@@ -384,7 +384,6 @@ button {
     color: white;
     border: none;
     border-radius: 30px;
-    font-size: 1em;
     cursor: pointer;
     transition: background 0.3s ease;
     margin: auto;
@@ -396,9 +395,24 @@ button {
     background: #3cdabd;
   }
 
+  hr{
+    border: none;
+    height: 1.5px;           /* Ajusta el grosor aquí */
+    background: #3cdabd;   /* Color de la línea */
+    margin: 40px auto;     /* Opcional: espacio arriba y abajo */
+  }
+
+  .urgencia{
+    text-decoration: none;
+    color: white;
+  }
+
+  .urgencia:hover {
+    text-decoration: underline;
+  }
 .Panel {
     width: 30%;
-    padding: 30px;
+    padding: 15px;
     background: #ff58e6;
     color: white;
     border: none;
