--- a/mi_app/staticfiles/CSS/signup.css
+++ b/mi_app/staticfiles/CSS/signup.css
@@ -29,3 +29,12 @@ body {
 h1{
     margin-top: 200px;
 }
+
+  .urgencia{
+    text-decoration: none;
+    color: white;
+  }
+
+  .urgencia:hover {
+    text-decoration: underline;
+  }
