--- a/mi_app/staticfiles/CSS/style.css
+++ b/mi_app/staticfiles/CSS/style.css
@@ -23,7 +23,14 @@ body {
     background-size: cover;
     font-family: "Poppins", sans-serif;
 }
+  .urgencia{
+    text-decoration: none;
+    color: white;
+  }
 
+  .urgencia:hover {
+    text-decoration: underline;
+  }
 /* Contenedor del botón */
 .whatsapp-container {
     position: fixed;
