--- a/mi_app/templates/adopta.html
+++ b/mi_app/templates/adopta.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motas</title>
-    <link rel="stylesheet" href="../static/CSS/adopta.css">
+    <link rel="stylesheet" href="{% static 'CSS/adopta.css' %}">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 
 <!--************************* Cabecera ************************* *****-->
 <div id="urgencias">
-    <p>Línea de urgencias 24/7</p>
+    <a href="tel:3115406289" class="urgencia">Llama a la línea de emergencia</a>
 </div>
 
 <header id="Header">
@@ -75,12 +76,11 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Contáctanos</h2>
-    <button class="emergency">Llama a la línea de emergencia</button>
+    <button class="emergency" id="btn-llamar-emergencia">Llama a la línea de emergencia</button>
     <button class="option" id="btn-whatsapp-modal">Escríbenos un mensaje</button>
     <button class="option" id="btn-agenda-modal">Agenda tu cita</button>
   </div>
 </div>
-
 <!--************************* carrusel ******************************-->
 <div class="carousel-container">
     <div class="carousel">
@@ -207,14 +207,14 @@
         <div class="redes-section">
             <h3>SERVICIOS</h3>
             <ul>
-                <li><a href="#">Ayudas Diagnósticas</a></li>
-                <li><a href="#">Hospitalización</a></li>
-                <li><a href="#">Urgencias 24 Horas</a></li>
-                <li><a href="#">Cirugía</a></li>
-                <li><a href="#">Medicina Preventiva</a></li>
-                <li><a href="#">Consulta</a></li>
-                <li><a href="#">Trámite de viaje</a></li>
-                <li><a href="#">Laboratorio Clínico</a></li>
+                <li><a href="{% url 'ayudas' %}">Ayudas Diagnósticas</a></li>
+                <li><a href="{% url 'hospitalizacion' %}">Hospitalización</a></li>
+                <li><a href="{% url 'urgencias' %}">Urgencias 24 Horas</a></li>
+                <li><a href="{% url 'cirugia' %}">Cirugía</a></li>
+                <li><a href="{% url 'medicina' %}">Medicina Preventiva</a></li>
+                <li><a href="{% url 'consulta' %}">Consulta</a></li>
+                <li><a href="{% url 'tramites' %}">Trámite de viaje</a></li>
+                <li><a href="{% url 'laboratorio' %}">Laboratorio Clínico</a></li>
             </ul>
         </div>
 
@@ -222,11 +222,9 @@
         <div class="redes-section">
             <h3>INFORMACIÓN</h3>
             <ul>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Contáctanos</a></li>
-                <li><a href="#">Preguntas frecuentes sobre cuidado animal</a></li>
-                <li><a href="#">Blog/Noticias</a></li>
-                <li><a href="#">Términos y Condiciones</a></li>
+                <li><a href="{% url 'nosotros' %}">Nosotros</a></li>
+                <li><a href="https://wa.me/573113020495" target="_blank">Contáctanos</a></li>
+                <li><a href="{% url 'adopta' %}">Adopta</a></li>
             </ul>
         </div>
     </div>
@@ -238,6 +236,10 @@
         Diseño y desarrollo por M. X. V. © 2025</p>
 </footer>
 <script>
+document.getElementById('btn-llamar-emergencia').onclick = function() {
+    window.location.href = 'tel:3115406289';
+};
+
 document.getElementById('btn-whatsapp-modal').onclick = function() {
     window.open('https://wa.me/573113020495', '_blank');
 };
