--- a/mi_app/templates/blog/cuidado_perros.html
+++ b/mi_app/templates/blog/cuidado_perros.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuidado veterinario para perros</title>
-    <link rel="stylesheet" href="../../static/CSS/blog.css">
+    <link rel="stylesheet" href="{% static '/CSS/blog.css' %}">
 </head>
 <body>
     <header>
