--- a/mi_app/templates/blog/vacunacion_gatos.html
+++ b/mi_app/templates/blog/vacunacion_gatos.html
@@ -1,11 +1,12 @@
 
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacunación en Gatos</title>
-    <link rel="stylesheet" href="../../static/CSS/blog.css">
+    <link rel="stylesheet" href="{% static '/CSS/blog.css' %}">
 </head>
 <body>
     <header>
