--- a/mi_app/templates/mascota_detail.html
+++ b/mi_app/templates/mascota_detail.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motas</title>
-    <link rel="stylesheet" href="../../static/CSS/mascota_detail.css?v=1">
+    <link rel="stylesheet" href="{% static 'CSS/mascota_detail.css' %}">
 
 </head>
 
@@ -47,12 +48,11 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Contáctanos</h2>
-    <button class="emergency">Llama a la línea de emergencia</button>
+    <button class="emergency" id="btn-llamar-emergencia">Llama a la línea de emergencia</button>
     <button class="option" id="btn-whatsapp-modal">Escríbenos un mensaje</button>
     <button class="option" id="btn-agenda-modal">Agenda tu cita</button>
   </div>
 </div>
-
     <h2>¡EDITA LOS DATOS DE TU MASCOTA!</h2><BR>
     <div class="form-seccion">
         <form method="POST">
@@ -107,6 +107,10 @@
     </div>
     <button class="Guardar-btn">GUARDAR</button>
 <script>
+document.getElementById('btn-llamar-emergencia').onclick = function() {
+    window.location.href = 'tel:3115406289';
+};
+
 document.getElementById('btn-whatsapp-modal').onclick = function() {
     window.open('https://wa.me/573113020495', '_blank');
 };
