--- a/mi_app/templates/mensaje_enviado.html
+++ b/mi_app/templates/mensaje_enviado.html
@@ -1,10 +1,11 @@
 {% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Mensaje enviado</title>
-    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="mensaje-exito" style="text-align:center; margin-top:50px;">
