--- a/mi_app/static/CSS/citas.css
+++ b/mi_app/static/CSS/citas.css
@@ -214,26 +214,32 @@ body {
 
 /* Modal fondo */
 .modal-agendar {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0; top: 0;
-  width: 100vw; height: 100vh;
-  background: rgba(0,0,0,0.5);
-  justify-content: center;
-  align-items: center;
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    /* Centrado del contenido */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 /* Modal contenido */
 .modal-agendar-content {
-  background: #fff;
-  margin: auto;
-  padding: 30px 20px;
-  border-radius: 16px;
-  max-width: 400px;
-  width: 90%;
-  position: relative;
-  box-shadow: 0 0 20px #0002;
+    background: #fff;
+    margin: auto;
+    padding: 30px 20px;
+    border-radius: 16px;
+    max-width: 400px;
+    width: 90%;
+    margin-top: 20%;
+    box-shadow: 0 0 20px #0002;
 }
 
 .cerrar-modal {
@@ -241,4 +247,7 @@ body {
   top: 10px; right: 20px;
   font-size: 2em;
   cursor: pointer;
+  margin-top: 19.5%;
+  margin-right: 35.8%;
 }
+
